2001-03-06  Mikhael Goikhman  <migo@homemail.com>

	* FvwmAnimate/FvwmAnimate.c:
	use a new module syntax

	* FvwmCommand/findcmd:
	protect "exec" and "echo" functions

	* FvwmScript/Scripts/Makefile.am:
	clean up FvwmScript-Setup95 on "make clean"

2001-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (Loop):
	fixed compile w/o shape extension

2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (SetTransparentBackground):
	fixed uninitialised variable

	* FvwmScript/FvwmScript.c (BuildGUI):
	fixed core dump when WindowSize option was not used

2001-02-28  Dan Espen  <dane@mk.telcordia.com>

	* FvwmButtons/FvwmButtons.1: Another round of cleanups.
	* FvwmButtons/ConfigFvwmButtons: Add panel, use new style module
	config lines.

2001-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (process_message):
	(list_deiconify):
	fixed handling of short M_DEICONIFY packets

	* FvwmButtons/FvwmButtons.c (SetTransparentBackground):
	rewrote button shape implementation

2001-02-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (SetTransparentBackground):

	* FvwmEvent/FvwmEvent.c:
	fixed an OpenBSD compile problem by removing inclusion of <values.h>

2001-02-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/icons.c (CreateIconWindow):
	(CreateBackIconWindow):
	(ConfigureIconWindow):
	* FvwmButtons/FvwmButtons.c (SetTransparentBackground):
	(Loop):
	(main):
	(swallow):
	Don't use shape extension if not supported by server.

	* FvwmButtons/FvwmButtons.c (Loop):
	handle transparency when resizing button bar
	(SetTransparentBackground):
	properly handle changing shape masks in buttons

2001-02-18  Dan Espen  <dane@mk.telcordia.com>

	* FvwmButtons/FvwmButtons.1: Use ":" module syntax.
	First pass cleanup.

2001-02-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (MovePage):
	removed stray XSynchronize()
	fixed moving mini windows with LabelsBelow option
